--- a/web/styles/app_variables.css
+++ b/web/styles/app_variables.css
@@ -237,8 +237,9 @@
     /* space direct message / stream / topic names from unread counters
     and @ mention indicators by 3px on the right */
     --left-sidebar-before-unread-count-padding: 3px;
-    /* 334px at 15px/1em */
-    --left-sidebar-max-width: 22.6667em;
+    --left-sidebar-right-margin: 12px;
+    /* 287px at 14px/1em */
+    --left-sidebar-max-width: calc(20.5em - var(--left-sidebar-right-margin));
     /* Sidebar width is 1/3 of the screen at smaller
        sizes, but gets held to the left sidebar's max width.
        This is very useful for areas in the CSS codebase
