app_layout: Express calculated max-width in 14px / 1em.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -39,7 +39,9 @@ body {
     .header-main,
     .app .app-main,
     #compose-container {
-        max-width: 1500px;
+        /* 1417px at 14px/1em; (14px * 20.5em) - 12px + 880 + 250px = 1417px */
+        max-width: 100.3571em;
+        max-width: calc(var(--left-sidebar-max-width) + 62.8571em + 250px);
     }
 
     &.fluid_layout_width {
